# visualization.milkdrop

./: .gitignore  CMakeLists.txt  Jenkinsfile  appveyor.yml  azure-pipelines.yml
.github/workflows/: increment-version.yml  sync-addon-metadata-translations.yml
depends/windows/nasmw/: CMakeLists.txt  nasmw.sha256  nasmw.txt
depends/windowsstore/nasmw/: 0001-Set-EXTERNAL_DEPENDENCIES-to-0-needed-to-prevent-Per.patch  CMakeLists.txt  nasmw.sha256  nasmw.txt
lib/vis_milkdrop/: CMakeLists.txt  dxcontext.cpp  dxcontext.h  milkdropfs.cpp  plugin.cpp  plugin.h  pluginshell.cpp  pluginshell.h  state.cpp  state.h  support.cpp  support.h  utility.cpp  utility.h
lib/vis_milkdrop/dx11/: DX11Context.cpp  DirectXHelpers.h
lib/vis_milkdrop/evallib/: CMakeLists.txt  cal_tab.h  eval.c
lib/vis_milkdrop/ns-eel2/: CMakeLists.txt  asm-nseel-arm.asm  asm-nseel-x64.asm  ns-eel.h  nseel-compiler.c
src/: MilkdropXBMC.cpp
visualization.milkdrop/: addon.xml  addon.xml.in
visualization.milkdrop/resources/: settings.xml
visualization.milkdrop/resources/language/resource.language.af_za/: strings.po
visualization.milkdrop/resources/language/resource.language.am_et/: strings.po
visualization.milkdrop/resources/language/resource.language.ar_sa/: strings.po
visualization.milkdrop/resources/language/resource.language.az_az/: strings.po
visualization.milkdrop/resources/language/resource.language.be_by/: strings.po
visualization.milkdrop/resources/language/resource.language.bg_bg/: strings.po
visualization.milkdrop/resources/language/resource.language.bs_ba/: strings.po
visualization.milkdrop/resources/language/resource.language.ca_es/: strings.po
visualization.milkdrop/resources/language/resource.language.cs_cz/: strings.po
visualization.milkdrop/resources/language/resource.language.cy_gb/: strings.po
visualization.milkdrop/resources/language/resource.language.da_dk/: strings.po
visualization.milkdrop/resources/language/resource.language.de_de/: strings.po
visualization.milkdrop/resources/language/resource.language.el_gr/: strings.po
visualization.milkdrop/resources/language/resource.language.en_au/: strings.po
visualization.milkdrop/resources/language/resource.language.en_gb/: strings.po
visualization.milkdrop/resources/language/resource.language.en_nz/: strings.po
visualization.milkdrop/resources/language/resource.language.en_us/: strings.po
visualization.milkdrop/resources/language/resource.language.eo/: strings.po
visualization.milkdrop/resources/language/resource.language.es_ar/: strings.po
visualization.milkdrop/resources/language/resource.language.es_es/: strings.po
visualization.milkdrop/resources/language/resource.language.es_mx/: strings.po
visualization.milkdrop/resources/language/resource.language.et_ee/: strings.po
visualization.milkdrop/resources/language/resource.language.eu_es/: strings.po
visualization.milkdrop/resources/language/resource.language.fa_af/: strings.po
visualization.milkdrop/resources/language/resource.language.fa_ir/: strings.po
visualization.milkdrop/resources/language/resource.language.fi_fi/: strings.po
visualization.milkdrop/resources/language/resource.language.fo_fo/: strings.po
visualization.milkdrop/resources/language/resource.language.fr_ca/: strings.po
visualization.milkdrop/resources/language/resource.language.fr_fr/: strings.po
visualization.milkdrop/resources/language/resource.language.gl_es/: strings.po
visualization.milkdrop/resources/language/resource.language.he_il/: strings.po
visualization.milkdrop/resources/language/resource.language.hi_in/: strings.po
visualization.milkdrop/resources/language/resource.language.hr_hr/: strings.po
visualization.milkdrop/resources/language/resource.language.hu_hu/: strings.po
visualization.milkdrop/resources/language/resource.language.id_id/: strings.po
visualization.milkdrop/resources/language/resource.language.is_is/: strings.po
visualization.milkdrop/resources/language/resource.language.it_it/: strings.po
visualization.milkdrop/resources/language/resource.language.ja_jp/: strings.po
visualization.milkdrop/resources/language/resource.language.ko_kr/: strings.po
visualization.milkdrop/resources/language/resource.language.lt_lt/: strings.po
visualization.milkdrop/resources/language/resource.language.lv_lv/: strings.po
visualization.milkdrop/resources/language/resource.language.mi/: strings.po
visualization.milkdrop/resources/language/resource.language.mk_mk/: strings.po
visualization.milkdrop/resources/language/resource.language.ms_my/: strings.po
visualization.milkdrop/resources/language/resource.language.mt_mt/: strings.po
visualization.milkdrop/resources/language/resource.language.my_mm/: strings.po
visualization.milkdrop/resources/language/resource.language.nb_no/: strings.po
visualization.milkdrop/resources/language/resource.language.nl_nl/: strings.po
visualization.milkdrop/resources/language/resource.language.pl_pl/: strings.po
visualization.milkdrop/resources/language/resource.language.pt_br/: strings.po
visualization.milkdrop/resources/language/resource.language.pt_pt/: strings.po
visualization.milkdrop/resources/language/resource.language.ro_ro/: strings.po
visualization.milkdrop/resources/language/resource.language.ru_ru/: strings.po
visualization.milkdrop/resources/language/resource.language.sk_sk/: strings.po
visualization.milkdrop/resources/language/resource.language.sl_si/: strings.po
visualization.milkdrop/resources/language/resource.language.sq_al/: strings.po
visualization.milkdrop/resources/language/resource.language.sr_rs/: strings.po
visualization.milkdrop/resources/language/resource.language.sr_rs@latin/: strings.po
visualization.milkdrop/resources/language/resource.language.sv_se/: strings.po
visualization.milkdrop/resources/language/resource.language.ta_in/: strings.po
visualization.milkdrop/resources/language/resource.language.tg_tj/: strings.po
visualization.milkdrop/resources/language/resource.language.th_th/: strings.po
(+6 files in other folders)
